# 01-ai-engineering-bootcamp

./: .env.example  .env_api.example  .env_evaluator.example  .gitignore  Dockerfile  Dockerfile.evaluator  Dockerfile.fastapi  Dockerfile.items_mcp  Dockerfile.reviews_mcp  Makefile  README.md  docker-compose.proxyman.yml  docker-compose.yml  pyproject.toml  rag-evaluation-dataset-24fdb08d.csv
.github/workflows/: ci.yaml
data/: reviews_filtered.db
evals/: eval_coordinator_agent.py  eval_retriever.py
evals/datasets/: coordinator_agent.py
jobs/: feed-db.py
notebooks/: 01-llm-apis.ipynb  02-amazon-eda.ipynb  03-rag-naive.ipynb  03-rag.ipynb  04-rag-evals.ipynb  05-hybrid-search.ipynb  06-clip.ipynb  07-langgraph-intro.ipynb  08-langgraph-single-turn-assistant.ipynb  09-langgraph-multi-turn-assistant.ipynb  10-sqlite.ipynb  11-reflection.ipynb  12-multiple-tools.ipynb  13-human-feedback.ipynb  14-mcp.ipynb  14a-post-mcp-clean.ipynb  15-router.ipynb  16-shopping-cart-tools.ipynb  17-shopping-cart-agent.ipynb  18-coordinator-agent.ipynb  19-coordinator-exact-evals.ipynb  20-litellm-router.ipynb  21-CI-Quality-Gate.ipynb  gpt35_token_vocab.csv  test.ipynb
src/api/: main.py
src/api/api/: endpoints.py  middleware.py  models.py
src/api/core/: config.py
src/api/processors/: submit_feedback.py
src/api/rag/: agent.py  (+6 more)
src/chatbot-ui/: retrieval.py  streamlit_app.py
src/chatbot_ui/: retrieval.py  streamlit_app.py
src/evaluator/: kafka_consumer.py
src/items_mcp_server/: main.py  utils.py
src/reviews_mcp_server/: main.py  utils.py
tmp/: test_proxy.py
(+8 files in other folders)
